# depot

./: .bazelrc  .dockerignore  .envrc  .gitignore  .hgignore  .hgtags  .stylish.haskell.yaml  .travis.yml  Dockerfile  Dockerfile.raw  Makefile  README.markdown  README.md  TODO  TazBlog.cabal  WORKSPACE  build.lisp  buildGo.nix  ci-builds.nix  com.googlecode.iterm2.plist  default.nix  gemma-docker.nix  gemma.asd  init-bindings.el  init-custom.el  init-eshell.el  init-evil.el  init-functions.el  init-mail.el  init-misc.el  init-modes.el  init-settings.el  init.el  proto.nix  read-tree.nix  run.sh  stack.yaml  tazblog.cabal  update.sh  xnomad  (+1 more)
arch/: PKGBUILD  tazblog@.service
bitlbee/: Dockerfile  bitlbee-rc.yaml  bitlbee-svc.yaml  bitlbee.conf  motd.txt  stunnel.conf
blog/: Main.hs
dns/: kontemplate-works  root-tazj-in
emacs.d/: init-bindings.el  init-custom.el  init-eshell.el  init-functions.el  init-modes.el  init-settings.el  init.el
example/: default.nix  main.go
fish/: config.fish
fish/functions/: edit.fish  runhoogle.fish  runirc.fish
frontend/: Main.elm
gogs/: gogs-nginx.yaml  gogs-rc.yaml  gogs-svc.yaml  gogs-tls.yaml.asc  gogs.conf  nginx.conf
infra/dns/: import  oslo-pub  root-tazj-in
infra/gcp/: default.tf
infra/kubernetes/: primary-cluster.yaml
infra/kubernetes/https-cert/: cert.yaml
infra/kubernetes/https-lb/: ingress.yaml
infra/kubernetes/nginx/: nginx.conf  nginx.yaml
infra/kubernetes/nixery/: config.yaml  id_nixery.pub  known_hosts  secrets.yaml  ssh_config
infra/kubernetes/tazblog/: config.yaml
infra/nixos/: configuration.nix  default.nix  gemma-config.lisp  glesys.nix  mail.nix  tazserve.nix
infra/nixos/dotfiles/: msmtprc  notmuch-config  offlineimaprc
infra/nixos/pkgs/: gemma.nix
infra/nixos/tazblog/: default.nix  packages.nix
init/: bindings.el  clojure.el  custom.el  eshell-setup.el  functions.el  haskell-setup.el  haskell.el  lisp-settings.el  lisp-setup.el  look-and-feel.el  mail-setup.el  mail.el  misc.el  modes.el  nixos.el  rust-setup.el  settings.el  term-setup.el  theme.el
k8s/: tazblog-db-rc.yaml  tazblog-db-service.yaml  tazblog-rc.yaml
nginx/: generate-dhparam  nginx-rc.yaml  nginx-svc.yaml  nginx.yaml  replace-config  server.conf
nginx/conf/: http.conf  main.conf  stream.conf
nix/: configuration.nix  glesys.nix  tazserve.nix
nix/tazblog/: configuration-packages.nix
overrides/: buildGo.nix  elmPackages.nix  kontemplate.nix  writeElispBin.nix
overrides/lispPackages/: default.nix  quicklisp.nix
plists/: org.pqrs.KeyRemap4MacBook.plist  org.pqrs.PCKeyboardHack.plist
quassel/: Dockerfile  quassel-rc.yaml  quassel-svc.yaml  stunnel.conf
res/: admin.css  blog.css  blog.lucius  blogstyle.css  blogstyle.lucius  blogv31.css  blogv311.css  blogv312.css  blogv33.css  bootstrap.css  keybase.txt
secrets/: nixery-gcs-json  nixery-gcs-pem  nixery-ssh-private
services/cgit-taz/: cgit_idx.patch  default.nix
services/gemma/: README.markdown  build.lisp  config.lisp  default.nix  gemma.asd
services/gemma/frontend/: elm-package.json
services/gemma/src/: gemma.lisp
services/nixcon-demo/: Cargo.toml  default.nix
services/nixcon-demo/src/: main.rs
services/tazblog/: .gitignore  BUILD  Dockerfile  Makefile  backup.sh  default.nix  shell.nix  stack.yaml  tazblog.cabal  tazblog.nix
services/tazblog/blog/: Main.hs
services/tazblog/db/: Main.hs
services/tazblog/k8s/: tazblog-rc.yaml  tazblog-svc.yaml
services/tazblog/src/: Blog.hs  BlogDB.hs  BlogStore.hs  Locales.hs  RSS.hs  Server.hs
services/tazblog/varnish/: Dockerfile
src/: Blog.hs  BlogDB.hs  Locales.hs  Main.hs  RSS.hs  Server.hs  gemma.lisp
tazblog/: tazblog-db.yaml  tazblog.yaml
tools/: fixcomments.hs  kms_pass.nix
tools/acid-fixer/: Main.hs
tools/acid-migrate/: Acid.hs
tools/aoc2019/: default.nix  solution-day1.el  solution-day2.el  solution-day3.el  solution-day4.el
tools/blog_cli/: README.md  default.nix  deps.nix  main.go
tools/colouriser/: LICENSE  colour.cabal  colour.hs
tools/convertdb/: Makefile  convertdb.go  couch.go
tools/emacs/: .gitignore  README.md  default.nix  init.el
tools/emacs-pkgs/dottime/: default.nix  dottime.el
tools/emacs-pkgs/nix-util/: default.nix  nix-util.el
tools/emacs-pkgs/term-switcher/: default.nix  term-switcher.el
tools/emacs/config/: bindings.el  custom.el  desktop.el  eshell-setup.el  functions.el  init.el  look-and-feel.el  mail-setup.el  modes.el  settings.el  term-setup.el
tools/emacs/init/: bindings.el  custom.el  functions.el  look-and-feel.el  mail-setup.el  modes.el  nixos.el  settings.el  term-setup.el
tools/gotest/: default.nix  lib.go  main.go  test.proto
tools/kms_pass/: default.nix
tools/music/: Makefile  gettitle  iTunes.8  iTunes.go  music  start
varnish/: Dockerfile  default.vcl
