Name:                TazBlog
Version:             3.4
Synopsis:            Tazjin's Blog
License-file:        LICENSE
Author:              Vincent Ambo
Maintainer:          tazjin@gmail.com
Category:            Web blog
Build-type:          Simple
cabal-version:       >= 1.2


Executable tazblog
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options: -O2

  Build-depends:
    base,
    bytestring,
    happstack-server,
    text,
    blaze-html,
    crypto-api,
    cryptohash,
    old-locale,
    time,
    base64-bytestring,
    acid-state,
    ixset,
    safecopy,
    mtl,
    transformers,
    network,
    options,
    rss,
    recaptcha,
    hamlet,
    shakespeare-css
