Name:                TazBlog
Version:             4.2
Synopsis:            Tazjin's Blog
License:             MIT
License-file:        LICENSE
Author:              Vincent Ambo
Maintainer:          tazjin@gmail.com
Category:            Web blog
Build-type:          Simple
cabal-version:       >= 1.2


Executable tazblog
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options: -O2
  Build-depends: base,
                 bytestring,
                 happstack-server,
                 text,
                 blaze-html,
                 blaze-markup,
                 crypto-api,
                 cryptohash,
                 old-locale,
                 time,
                 base64-bytestring,
                 acid-state,
                 ixset,
                 safecopy,
                 mtl,
                 transformers,
                 network,
                 network-uri,
                 options,
                 rss,
                 hamlet,
                 shakespeare,
                 markdown
  extensions:
             DeriveDataTypeable
             FlexibleContexts
             GeneralizedNewtypeDeriving
             MultiParamTypeClasses
             OverloadedStrings
             RecordWildCards
             ScopedTypeVariables
             TemplateHaskell
             TypeFamilies
             QuasiQuotes
