Name:                tazblog
Version:             5.0
Synopsis:            Tazjin's Blog
License:             MIT
License-file:        LICENSE
Author:              Vincent Ambo
Maintainer:          tazjin@gmail.com
Category:            Web blog
Build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs: src
  default-language:    Haskell2010
  exposed-modules: Blog, BlogDB, Locales, Server, RSS
  build-depends: base,
                 bytestring,
                 happstack-server,
                 text,
                 blaze-html,
                 blaze-markup,
                 crypto-api,
                 cryptohash,
                 old-locale,
                 time,
                 base64-bytestring,
                 acid-state,
                 ixset,
                 safecopy,
                 mtl,
                 transformers,
                 network,
                 network-uri,
                 rss,
                 hamlet,
                 shakespeare,
                 markdown
  default-extensions:
             DeriveDataTypeable
             FlexibleContexts
             GeneralizedNewtypeDeriving
             MultiParamTypeClasses
             OverloadedStrings
             RecordWildCards
             ScopedTypeVariables
             TemplateHaskell
             TypeFamilies
             QuasiQuotes

executable tazblog
  hs-source-dirs: blog
  main-is: Main.hs
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base,
                 acid-state,
                 tazblog,
                 options,
                 network

executable tazblog-db
  hs-source-dirs: db
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base,
                 acid-state,
                 tazblog,
                 options,
                 network
