Name:                tazblog
Version:             6.0.0
Synopsis:            Tazjin's Blog
License:             MIT
Author:              Vincent Ambo
Maintainer:          mail@tazj.in
Category:            Web blog
Build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -W
  exposed-modules: Blog, BlogStore, Server, RSS
  build-depends: aeson,
                 base,
                 bytestring,
                 happstack-server,
                 text,
                 blaze-html,
                 dns,
                 old-locale,
                 time,
                 base64-bytestring,
                 network,
                 network-uri,
                 rss,
                 shakespeare,
                 markdown

executable tazblog
  hs-source-dirs: blog
  main-is: Main.hs
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base,
                 tazblog,
                 network
